--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "airbnb-react",
   "version": "1.0.0",
   "description": "Airbnb React",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "tailwindcss": "^3.4.1"
   },
   "keywords": [],
   "author": "Haiku Academy",
