Create dummy component for Login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
   "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-  "editor.formatOnType": true, // required
-  "editor.formatOnPaste": true, // optional
-  "editor.formatOnSave": true, // optional
+  "editor.formatOnType": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
   "prettier.configPath": "",
-  "editor.formatOnSaveMode": "file", // required to format on save
-  "files.autoSave": "onFocusChange", // optional but recommended
+  "editor.formatOnSaveMode": "file",
+  "files.autoSave": "onFocusChange",
   "vs-code-prettier-eslint.prettierLast": false,
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  } // set as "true" to run 'prettier' last not first
+  }
 }
