--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   },
   "eslintConfig": {
     "extends": [
