--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -29,11 +30,11 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
-    "tailwindcss": "^3.4.1",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+    "tailwindcss": "^3.4.1"
   },
   "eslintConfig": {
     "extends": [
